[tool.poetry]
name = "sleeper-pr"
version = "0.1.0"
description = "Analyze sleeper fantasy football league"
authors = ["Felix Clark <mfclark3690@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.8"
pandas = "^1.5.2"
numpy = "^1.23.5"
plotnine = "^0.10.1"
requests = "^2.28.1"
adjustText = "^0.7.3"
pyarrow = "^10.0.1"
mip = "^1.13.0"

[tool.poetry.dev-dependencies]
types-requests = "^2.25.11"
pylint = "^2.11.1"
typing-extensions = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
